--- a/src/app/materiales/materiales.component.html
+++ b/src/app/materiales/materiales.component.html
@@ -111,6 +111,10 @@
                                     *ngIf="materialesForm.get('categoria')?.hasError('required') && materialesForm.get('categoria')?.touched">
                                     <span>El nombre del producto <strong>es obligatorio</strong></span>
                                 </div>
+                                <div class="text-danger"
+                                *ngIf="materialesForm.get('categoria')?.hasError('pattern') && materialesForm.get('categoria')?.dirty">
+                                <span>Ingrese solamente <strong> texto </strong></span>
+                            </div>
                             </div>
                             <div class="mb-3">
                                 <input type="text" formControlName="infoMaterial" [(ngModel)]="selectedMaterial.infoMaterial" class="form-control form-control-lg"
@@ -119,13 +123,18 @@
                                     *ngIf="materialesForm.get('infoMaterial')?.hasError('required') && materialesForm.get('infoMaterial')?.touched">
                                     <span>La categoria <strong>es obligatoria</strong></span>
                                 </div>
+                                <div class="text-danger"
+                                *ngIf="materialesForm.get('infoMaterial')?.hasError('pattern') && materialesForm.get('infoMaterial')?.dirty">
+                                <span>Ingrese solamente <strong> texto </strong></span>
+                            </div>
                             </div>
                             <div class="mb-3">
-                                <div class="form-check form-switch">
-                                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
-                                <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
+                              <label for="exampleFormControlInput1" class="form-label">Estado</label>
+                              <select class="form-select" aria-label="Default select example">
+                                <option selected>Disponible</option>
+                                <option value="1">Agotado</option>
+                              </select>
                             </div>
-                          </div>
                             <div class="mb-3" class="modal-footer">
                                 <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
                             <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
@@ -181,6 +190,10 @@
                         *ngIf="materialesEditForm.get('categoria')?.hasError('required') && materialesEditForm.get('categoria')?.touched">
                         <span>El este campo<strong>es obligatorio</strong></span>
                     </div>
+                    <div class="text-danger"
+                    *ngIf="materialesEditForm.get('categoria')?.hasError('pattern') && materialesEditForm.get('categoria')?.dirty">
+                    <span>Ingrese solamente <strong> texto </strong></span>
+                </div>
                 </div>
                 <div class="mb-3">
                   <label for="exampleFormControlInput1" class="form-label">Información del material</label>
@@ -190,12 +203,17 @@
                         *ngIf="materialesEditForm.get('infoMaterial')?.hasError('required') && materialesEditForm.get('infoMaterial')?.touched">
                         <span>Este campo <strong>es obligatoria</strong></span>
                     </div>
+                    <div class="text-danger"
+                    *ngIf="materialesEditForm.get('infoMaterial')?.hasError('pattern') && materialesEditForm.get('infoMaterial')?.dirty">
+                    <span>Ingrese solamente <strong> texto </strong></span>
+                </div>
                 </div>
                 <div class="mb-3">
-                  <div class="form-check form-switch">
-                    <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
-                </div>
+                  <label for="exampleFormControlInput1" class="form-label">Estado</label>
+                  <select class="form-select" aria-label="Default select example">
+                    <option selected>Disponible</option>
+                    <option value="1">Agotado</option>
+                  </select>
                 </div>
                 <div class="mb-3" class="modal-footer">
                     <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
