--- a/src/app/servicios/servicios.component.html
+++ b/src/app/servicios/servicios.component.html
@@ -91,7 +91,7 @@
 <div class="modal-dialog" role="document">
   <div class="modal-content">
     <div class="modal-header">
-      <h5 class="modal-title" id="exampleModalLabel">Registrar Material</h5>
+      <h5 class="modal-title" id="exampleModalLabel">Registrar servicios</h5>
       <button type="button" class="close" data-dismiss="modal" aria-label="Close">
         <span aria-hidden="true">&times;</span>
       </button>
@@ -100,39 +100,39 @@
 
       <div class="container">
            <!-- Info boxes -->
-           <div class="row p-2">
+           <div class="row">
       
             <div class="col-lg-12">
                       <form class="mt-3" [formGroup]="serviciosForm" (ngSubmit)="agregarServicio()">
                           <div class="mb-3">
-                              <input type="text" formControlName="categoria" [(ngModel)]="selectedServicio.categoria" class="form-control form-control-lg"
+                              <input type="text" formControlName="nombre" [(ngModel)]="selectedServicio.nombre" class="form-control form-control-lg"
                                   placeholder="Nombre">
                               <div class="text-danger"
                                   *ngIf="serviciosForm.get('nombre')?.hasError('required') && serviciosForm.get('nombre')?.touched">
                                   <span>El nombre del producto <strong>es obligatorio</strong></span>
                               </div>
+                              <div class="text-danger"
+                                  *ngIf="serviciosForm.get('nombre')?.hasError('pattern') && serviciosForm.get('nombre')?.dirty">
+                                  <span>Ingrese solo <strong> texto </strong></span>
+                              </div>
                           </div>
 
                           <div class="mb-3">
-                              <input type="text" formControlName="categoria" [(ngModel)]="selectedServicio.categoria" class="form-control form-control-lg"
-                                  placeholder="Categoria">
-                              <div class="text-danger"
-                                  *ngIf="serviciosForm.get('categoria')?.hasError('required') && serviciosForm.get('categoria')?.touched">
-                                  <span>La categoria <strong>es obligatoria</strong></span>
-                              </div>
+                            <label for="exampleFormControlInput1" class="form-label">Estado</label>
+                            <select class="form-select" aria-label="Default select example">
+                              <option selected>Obra blanca</option>
+                              <option value="1">Obra negra</option>
+                              <option value="1">Obra gris</option>
+                            </select>
                           </div>
-                          <div class="mb-3">
-                              <input type="number" formControlName="estado" [(ngModel)]="selectedServicio.estado" class="form-control form-control-lg"
-                                  placeholder="Estado">
-                              <div class="text-danger"
-                                  *ngIf="serviciosForm.get('estado')?.hasError('required') && serviciosForm.get('estado')?.touched">
-                                  <span>El precio <strong>es obligatorio</strong></span>
-                              </div>
-                          </div>
+                          <div class="form-check form-switch">
+                            <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                            <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
+                        </div>
                           <div class="mb-3" class="modal-footer">
                               <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
                           <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
-                          <button type="submit" [disabled]="serviciosForm.invalid" [disabled]="serviciosForm.invalid" class="btn btn-success">Registar</button>
+                          <button type="submit" [disabled]="serviciosForm.invalid" class="btn btn-success">Registar</button>
                           </div>
                       </form>
                   </div>
@@ -142,8 +142,6 @@
 
 
           </div>
-
-
 
       </div>
 
@@ -171,7 +169,7 @@
 
       <div class="container">
            <!-- Info boxes -->
-      <div class="row p-4">
+      <div class="row">
        
 
         <div class="col-lg-12">
@@ -181,37 +179,29 @@
                       placeholder="Nombre servicio">
                   <div class="text-danger"
                       *ngIf="serviciosEditForm.get('nombre')?.hasError('required') && serviciosEditForm.get('nombre')?.touched">
-                      <span>El nombre del producto <strong>es obligatorio</strong></span>
+                      <span>El nombre del nombre del servicio<strong>es obligatorio</strong></span>
                   </div>
+                  <div class="text-danger"
+                  *ngIf="serviciosEditForm.get('nombre')?.hasError('pattern') && serviciosEditForm.get('nombre')?.dirty">
+                  <span>Ingrese solamente <strong> texto </strong></span>
+              </div>
               </div>
               <div class="mb-3">
-                  <input type="text" formControlName="categoria" [(ngModel)]="editServicio.categoria" class="form-control form-control-lg"
-                      placeholder="Categoria">
-                  <div class="text-danger"
-                      *ngIf="serviciosEditForm.get('categoria')?.hasError('required') && serviciosEditForm.get('categoria')?.touched">
-                      <span>La categoria <strong>es obligatoria</strong></span>
-                  </div>
+                <label for="exampleFormControlInput1" class="form-label">Estado</label>
+                <select class="form-select" aria-label="Default select example">
+                  <option selected>Obra blanca</option>
+                  <option value="1">Obra negra</option>
+                  <option value="1">Obra gris</option>
+                </select>
               </div>
-              <div class="mb-3">
-                  <input type="text" formControlName="estado" [(ngModel)]="editServicio.estado" class="form-control form-control-lg"
-                      placeholder="Ubicacion">
-                  <div class="text-danger"
-                      *ngIf="serviciosEditForm.get('estado')?.hasError('required') && serviciosEditForm.get('estado')?.touched">
-                      <span>La ubicacion <strong>es obligatoria</strong></span>
-                  </div>
-              </div>
-              <div class="mb-3">
-                  <input type="text" formControlName="fecha" [(ngModel)]="editServicio.fecha" class="form-control form-control-lg"
-                      placeholder="fecha">
-                  <div class="text-danger"
-                      *ngIf="serviciosEditForm.get('fecha')?.hasError('required') && serviciosEditForm.get('fecha')?.touched">
-                      <span>El precio <strong>es obligatorio</strong></span>
-                  </div>
-              </div>
+              <div class="form-check form-switch">
+                <input class="form-check-input" type="checkbox" id="flexSwitchCheckDefault" checked>
+                <label class="form-check-label" for="flexSwitchCheckDefault">Estado</label>
+            </div>
               <div class="mb-3" class="modal-footer">
                   <!-- <button routerLink="/" class="btn btn-secondary btn-lg float-start">VOLVER</button> -->
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Volver</button>
-              <button type="submit" [disabled]="serviciosEditForm.invalid" [disabled]="serviciosEditForm.invalid" class="btn btn-success">Guardar</button>
+              <button type="submit" [disabled]="serviciosEditForm.invalid" class="btn btn-success">Guardar</button>
               </div>
           </form>
       </div>
