--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,8 +1,7 @@
-<footer class="container-fluid bg-dark text-light p-1 text-center mt-3 p-4 fixed-bottom">
+<footer class="container-fluid bg-dark text-light p-1 text-center pt-4 fixed-bottom">
     <div class="container">
      <p class="text-white">
-         &copy; derechos reservados a rya
- 
+        2022 &copy; rya 
      </p>
     </div>
    </footer>
